results/SVCOMP/4-shot/log-ExSymExe12-2024_03_18_17_30_33.txt
class Main {
  static int field;
  static int field2;

  //@ requires \symbolic arg;
  //@ ensures \result ==> field2 == \old(field2);
  //@ ensures !\result ==> field2 != \old(field2);
  public static boolean f(int arg) {
    int x = 3;

    Main inst = new Main();
    field = 9;
    if (arg < 0) return true;
    return inst.test(x, arg, field2);
  }

  //@ requires \symbolic x;
  //@ requires \symbolic z;
  //@ requires \symbolic r;
  //@ ensures \result ==> field2 == \old(field2);
  //@ ensures !\result ==> field2 != \old(field2);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe12");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z < x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x < r) System.out.println("branch BOO1");
    else {
      System.out.println("branch BOO2");
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe12.java:5: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic arg;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe12.java:17: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe12.java:18: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic z;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe12.java:19: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic r;
               ^
4 errors

